tests/ui/reachable/expr_cast.stderr
error: unreachable expression
  --> $DIR/expr_cast.rs:5:9
   |
LL |     _ = {return} as u32;
   |         ^------^^^^^^^^
   |         ||
   |         |any code following this expression is unreachable
   |         unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_cast.rs:2:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_cast.rs:9:5
   |
LL |     (return) as u32;
   |     --------^^^^^^^
   |     |
   |     unreachable expression
   |     any code following this expression is unreachable

error: aborting due to 2 previous errors

